--- a/about.html
+++ b/about.html
@@ -28,26 +28,7 @@
 	</div>
 	<!-- ***** Magic Cursor Area End ***** -->
 
-	<!-- ***** Preloader Area Start ***** -->
-	<div class="preloader">
-		<svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
-			<path id="loader" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
-		</svg>
 
-		<!-- Loader Container -->
-		<div class="loader-container">
-			<div class="loaded">
-				<span>L</span>
-				<span>O</span>
-				<span>A</span>
-				<span>D</span>
-				<span>I</span>
-				<span>N</span>
-				<span>G</span>
-			</div>
-		</div>
-	</div>
-	<!-- ***** Preloader Area End ***** -->
 
 	<!-- ***** Main Area Start ***** -->
 	<div class="main">
@@ -67,10 +48,7 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="index.html" class="nav-link">Home</a>
-						</li>
-						<li class="nav-item">
-							<a href="portfolio.html" class="nav-link">Works</a>
+							<a href="projects.html" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
 							<a href="about.html" class="nav-link active">About</a>
@@ -116,7 +94,7 @@
 										<h1 class="title">timeless stories.</h1>
 									</div>
 								</div>
-								<p class="sub-title w-50 mt-4 ms-auto">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;I transform ideas into impactful digital experiences, delivering innovative solutions that elevate brands and captivate audiences around the world.</p>
+								<p class="sub-title w-50 mt-4 ms-auto">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;My expertise lies in crafting experiences that seamlessly integrate functionality and aesthetics, elevating user satisfaction and driving impactful business outcomes.</p>
 							</div>
 						</div>
 					</div>
@@ -141,49 +119,39 @@
 						<div class="col-12 col-lg-3">
 							<!-- Intro -->
 							<div class="intro">
-								<h3 class="title">Experiences</h3>
+								<h3 class="title">Experience</h3>
 							</div>
 						</div>
 						<div class="col-12 col-lg-8">
 							<div class="row items">
 								<!-- Item -->
-								<div class="col-12 col-md-6 item">
+								<div class=" item">
 									<div class="content">
 										<span class="count">01.</span>
-										<h4 class="title mt-0 mb-3">Creative Labs</h4>
-										<h6 class="position my-3">Sr. Web Developer & Designer</h6>
-										<span class="badge small">Jan 2024 – Present</span>
-										<p>At Creative Labs, I lead a team of designers and developers to deliver high-quality digital products. My role involves overseeing the entire development process.</p>
+										<h4 class="title mt-0 mb-3">Folks Finance</h4>
+										<h6 class="position my-3">UX Designer</h6>
+										<span class="badge small">Oct 2022 – Present</span>
+										<p>I am currently leading the end-to-end user experience design process of fintech products. I define success metrics for each project and iterate based on user testing feedback and post-launch performance, improving usability and user satisfaction.</p>
 									</div>
 								</div>
 								<!-- Item -->
 								<div class="col-12 col-md-6 item">
 									<div class="content">
 										<span class="count">02.</span>
-										<h4 class="title mt-0 mb-3">Tech Innovations Inc.</h4>
-										<h6 class="position my-3">Full-Stack Developer</h6>
-										<span class="badge small">Jun 2021 – Dec 2023</span>
-										<p>As a Full-Stack Developer at Tech Innovations Inc., I worked on a variety of projects that required both front-end and back-end expertise for developing web applications.</p>
+										<h4 class="title mt-0 mb-3">FEV Automotive</h4>
+										<h6 class="position my-3">UX Engineer Intern</h6>
+										<span class="badge small">Jul 2022 – Sep 2022</span>
+										<p>I owned the design process of a vehicle bus loads app, and assisted engineers in the software development, leading to a successful launch to FEV's 7000+ employees.</p>
 									</div>
 								</div>
 								<!-- Item -->
 								<div class="col-12 col-md-6 item">
 									<div class="content">
 										<span class="count">03.</span>
-										<h4 class="title mt-0 mb-3">StartUp Solutions</h4>
-										<h6 class="position my-3">Web Developer</h6>
-										<span class="badge small">Aug 2019 – May 2021</span>
-										<p>At StartUp Solutions, I began my career as a Web Developer, where I focused on building and maintaining websites for small businesses. I honed my skills in HTML, CSS, JavaScript, and WordPress.</p>
-									</div>
-								</div>
-								<!-- Item -->
-								<div class="col-12 col-md-6 item">
-									<div class="content">
-										<span class="count">04.</span>
-										<h4 class="title mt-0 mb-3">WebWorks Agency</h4>
-										<h6 class="position my-3">Junior Web Developer (Internship)</h6>
-										<span class="badge small">Jun 2017 – Jul 2019</span>
-										<p>During my internship at WebWorks Agency, I had the opportunity to work alongside experienced developers on various web design and development projects.</p>
+										<h4 class="title mt-0 mb-3">Proxify</h4>
+										<h6 class="position my-3">Freelance UX Designer</h6>
+										<span class="badge small">May 2020 – Jun 2022</span>
+										<p>After completing the vetting process of Proxify, I delivered pixel-perfect commercial apps for international clients, managing the full design lifecycle of mobile or web applications.</p>
 									</div>
 								</div>
 							</div>
@@ -500,7 +468,7 @@
 										<a href="index.html" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="portfolio.html" class="nav-link">Works <span class="item-count">(02)</span></a>
+										<a href="projects.html" class="nav-link">Works <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link active">About <span class="item-count">(03)</span></a>
