--- a/contact.html
+++ b/contact.html
@@ -28,27 +28,6 @@
 	</div>
 	<!-- ***** Magic Cursor Area End ***** -->
 
-	<!-- ***** Preloader Area Start ***** -->
-	<div class="preloader">
-		<svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
-			<path id="loader" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
-		</svg>
-
-		<!-- Loader Container -->
-		<div class="loader-container">
-			<div class="loaded">
-				<span>L</span>
-				<span>O</span>
-				<span>A</span>
-				<span>D</span>
-				<span>I</span>
-				<span>N</span>
-				<span>G</span>
-			</div>
-		</div>
-	</div>
-	<!-- ***** Preloader Area End ***** -->
-
 	<!-- ***** Main Area Start ***** -->
 	<div class="main">
 		<!-- ***** Header Start ***** -->
@@ -67,10 +46,7 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="index.html" class="nav-link">Home</a>
-						</li>
-						<li class="nav-item">
-							<a href="portfolio.html" class="nav-link">Works</a>
+							<a href="projects.html" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
 							<a href="about.html" class="nav-link">About</a>
@@ -349,7 +325,7 @@
 										<a href="index.html" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="portfolio.html" class="nav-link">Works <span class="item-count">(02)</span></a>
+										<a href="projects.html" class="nav-link">Works <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
