--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Title  -->
-	<title>Brilio - Personal Portfolio HTML Template</title>
+	<title>Radu Lucian</title>
 
 	<!-- Favicon  -->
 	<link rel="icon" href="assets/img/favicon.png">
@@ -67,7 +67,7 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="portfolio.html" class="nav-link">Projects</a>
+							<a href="projects.html" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
 							<a href="about.html" class="nav-link">About</a>
@@ -135,7 +135,7 @@
 							<!-- Intro -->
 							<div class="intro d-flex justify-content-between align-items-center">
 								<h3 class="title">Projects</h3>
-								<a class="btn btn-outline content-btn swap-icon" href="portfolio.html">View all <i class="icon bi bi-arrow-right-short"></i></a>
+								<a class="btn btn-outline content-btn swap-icon" href="projects.html">View all <i class="icon bi bi-arrow-right-short"></i></a>
 							</div>
 						</div>
 					</div>
@@ -872,7 +872,7 @@
 										<a href="index.html" class="nav-link active">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="portfolio.html" class="nav-link">Works <span class="item-count">(02)</span></a>
+										<a href="projects.html" class="nav-link">Works <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
@@ -916,6 +916,23 @@
 	<!-- ***** All jQuery Plugins ***** -->
 
 	<!-- jQuery(necessary for all JavaScript plugins) -->
+	<script>
+		// Check if preloader has already been shown
+		if (!localStorage.getItem("preloaderShown")) {
+			// Display the preloader
+			document.getElementById("preloader").style.display = "block";
+	
+			// Set timeout to hide the preloader after it finishes (adjust time as needed)
+			setTimeout(() => {
+				document.getElementById("preloader").style.display = "none";
+				// Mark preloader as shown
+				localStorage.setItem("preloaderShown", "true");
+			}, 3000); // Change 3000ms to the duration of the preloader animation
+		} else {
+			// Hide the preloader immediately if it has been shown before
+			document.getElementById("preloader").style.display = "none";
+		}
+	</script>
 	<script src="assets/js/vendor/jquery.min.js"></script>
 
 	<!-- Bootstrap js -->
