--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Title  -->
-	<title>Brilio - Personal Portfolio HTML Template</title>
+	<title>Radu Lucian | Projects</title>
 
 	<!-- Favicon  -->
 	<link rel="icon" href="assets/img/favicon.png">
@@ -27,27 +27,6 @@
 		<div id="cursor"></div>
 	</div>
 	<!-- ***** Magic Cursor Area End ***** -->
-
-	<!-- ***** Preloader Area Start ***** -->
-	<div class="preloader">
-		<svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
-			<path id="loader" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
-		</svg>
-
-		<!-- Loader Container -->
-		<div class="loader-container">
-			<div class="loaded">
-				<span>L</span>
-				<span>O</span>
-				<span>A</span>
-				<span>D</span>
-				<span>I</span>
-				<span>N</span>
-				<span>G</span>
-			</div>
-		</div>
-	</div>
-	<!-- ***** Preloader Area End ***** -->
 
 	<!-- ***** Main Area Start ***** -->
 	<div class="main">
@@ -67,10 +46,7 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="index.html" class="nav-link">Home</a>
-						</li>
-						<li class="nav-item">
-							<a href="portfolio.html" class="nav-link active">Works</a>
+							<a href="projects.html" class="nav-link active">Projects</a>
 						</li>
 						<li class="nav-item">
 							<a href="about.html" class="nav-link">About</a>
@@ -457,7 +433,7 @@
 										<a href="index.html" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="portfolio.html" class="nav-link active">Works <span class="item-count">(02)</span></a>
+										<a href="projects.html" class="nav-link active">Works <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
