--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Title  -->
-	<title>Brilio - Personal Portfolio HTML Template</title>
+	<title>Radu Lucian</title>
 
 	<!-- Favicon  -->
 	<link rel="icon" href="assets/img/favicon.png">
@@ -40,7 +40,7 @@
 					<!-- Navbar Brand-->
 					<div class="magnetic">
 						<a class="navbar-brand" href="index.html">
-							Brilio.
+							Radu Lucian
 						</a>
 					</div>
 					<div class="ms-auto"></div>
@@ -284,8 +284,8 @@
 
 					<div class="row justify-content-center mt-4">
 						<div class="col-12 col-md-10">
-							<!-- Brilio Accordion -->
-							<div class="accordion accordion-flush" id="brilio-accordion">
+							<!-- Radu Lucian Accordion -->
+							<div class="accordion accordion-flush" id="Radu Lucian-accordion">
 								<!-- Accordion Item -->
 								<div class="accordion-item">
 									<h4 class="accordion-header">
@@ -293,7 +293,7 @@
 										What services do you offer?
 										</button>
 									</h4>
-									<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#brilio-accordion">
+									<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#Radu Lucian-accordion">
 										<div class="accordion-body">I offer a range of services including web design, branding, digital marketing, UI/UX design etc. Each project is tailored to meet your <a href="#">unique needs</a> and goals.</div>
 									</div>
 								</div>
@@ -305,7 +305,7 @@
 										How do I get started on a project with you?
 										</button>
 									</h4>
-									<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#brilio-accordion">
+									<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#Radu Lucian-accordion">
 										<div class="accordion-body">Getting started is simple! Just reach out via the <a href="contact.html">contact form</a> on my website with your project details, and I’ll schedule a consultation to discuss how we can work together to achieve your vision.</div>
 									</div>
 								</div>
@@ -317,7 +317,7 @@
 										Can you help with creative direction or ideas?
 										</button>
 									</h4>
-									<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#brilio-accordion">
+									<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#Radu Lucian-accordion">
 										<div class="accordion-body">Absolutely! Whether you have a clear vision or need help developing ideas, I offer <a href="#">creative direction</a> to guide your project and ensure it reflects your brand or personal style.</div>
 									</div>
 								</div>
@@ -329,7 +329,7 @@
 										What is your pricing structure?
 										</button>
 									</h4>
-									<div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#brilio-accordion">
+									<div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#Radu Lucian-accordion">
 										<div class="accordion-body">Pricing varies depending on the scope and complexity of the project. After an initial discussion, I’ll provide you with a customized quote that aligns with your specific requirements.</div>
 									</div>
 								</div>
@@ -341,7 +341,7 @@
 										Do you work with international clients?
 										</button>
 									</h4>
-									<div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#brilio-accordion">
+									<div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#Radu Lucian-accordion">
 										<div class="accordion-body">Yes, I work with clients from around the world. Thanks to remote collaboration tools, we can easily communicate and work together regardless of your location.</div>
 									</div>
 								</div>
@@ -385,7 +385,7 @@
 						<div class="col-12">
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
-								<div class="copyright">&copy;2024 Brilio, All Rights Reserved By <a href="https://themeforest.net/user/theme_land" target="_blank">Themeland</a></div>
+								<div class="copyright">&copy; 2024 Radu Lucian. All rights reserved.</a></div>
 								<!-- Scroll To Top -->
 								<div id="scroll-to-top" class="scroll-to-top mt-3 mt-sm-0">
 									<a href="#header" class="smooth-anchor">Scroll to Top</a>
