--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Title  -->
-	<title>Brilio - Personal Portfolio HTML Template</title>
+	<title>Radu Lucian</title>
 
 	<!-- Favicon  -->
 	<link rel="icon" href="assets/img/favicon.png">
@@ -38,7 +38,7 @@
 					<!-- Navbar Brand-->
 					<div class="magnetic">
 						<a class="navbar-brand" href="index.html">
-							Brilio.
+							Radu Lucian
 						</a>
 					</div>
 					<div class="ms-auto"></div>
@@ -127,7 +127,7 @@
 										<!-- Item -->
 										<li class="list-group-item">
 											<i class="icon icon-envelope-open"></i>
-											<a class="content" href="mailto:hello@brilio.com">hello@brilio.com</a>
+											<a class="content" href="mailto:hello@Radu Luciancom">hello@Radu Luciancom</a>
 										</li>
 
 										<!-- Item -->
@@ -242,7 +242,7 @@
 						<div class="col-12">
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
-								<div class="copyright">&copy;2024 Brilio, All Rights Reserved By <a href="https://themeforest.net/user/theme_land" target="_blank">Themeland</a></div>
+								<div class="copyright">&copy; 2024 Radu Lucian. All rights reserved.</a></div>
 								<!-- Scroll To Top -->
 								<div id="scroll-to-top" class="scroll-to-top mt-3 mt-sm-0">
 									<a href="#header" class="smooth-anchor">Scroll to Top</a>
