--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 					<!-- Navbar Brand-->
 					<div class="magnetic">
 						<a class="navbar-brand" href="index.html">
-							Brilio.
+							Radu Lucian
 						</a>
 					</div>
 					<div class="ms-auto"></div>
@@ -350,7 +350,7 @@
 						<div class="col-12">
 							<div class="footer-content d-flex flex-wrap justify-content-center justify-content-md-between align-items-center py-4">
 								<!-- Copyright -->
-								<div class="copyright">&copy;2024 Brilio, All Rights Reserved By <a href="https://themeforest.net/user/theme_land" target="_blank">Themeland</a></div>
+								<div class="copyright">&copy; 2024 Radu Lucian. All rights reserved.</a></div>
 								<!-- Scroll To Top -->
 								<div id="scroll-to-top" class="scroll-to-top mt-3 mt-sm-0">
 									<a href="#header" class="smooth-anchor">Scroll to Top</a>
