--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
 								<h2 class="title reveal-text mt-0">Addressing UX challenges with innovative strategies to deliver pixel-perfect solutions.</h2>
 							</div>
 
-							<div class="wrapper">
+							<div class="services_wrapper">
 								<p class="sub-title">Transforming ideas into digital realities by blending strategic insights with innovative design, helping brands thrive in a rapidly evolving digital landscape.</p>
-								<a class="btn magnetic-button btn-outline" href="about.html">About me <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a class="btn magnetic-button btn-outline services_wrapper_button" href="about.html">About me <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 						</div>
 					</div>
