--- a/blog.html
+++ b/blog.html
@@ -46,10 +46,7 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="index.html" class="nav-link active">Home</a>
-						</li>
-						<li class="nav-item">
-							<a href="projects.html" class="nav-link">Works</a>
+							<a href="projects.html" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
 							<a href="about.html" class="nav-link">About</a>
