--- a/index-dark.html
+++ b/index-dark.html
@@ -67,10 +67,7 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="index-dark.html" class="nav-link active">Home</a>
-						</li>
-						<li class="nav-item">
-							<a href="portfolio-dark.html" class="nav-link">Works</a>
+							<a href="portfolio-dark.html" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
 							<a href="about-dark.html" class="nav-link">About</a>
