--- a/portfolio-single-dark.html
+++ b/portfolio-single-dark.html
@@ -68,7 +68,7 @@
 					<ul class="navbar-nav items d-none d-md-block">
 						
 						<li class="nav-item">
-							<a href="portfolio-dark.html" class="nav-link">Works</a>
+							<a href="portfolio-dark.html" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
 							<a href="about-dark.html" class="nav-link">About</a>
