--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Title  -->
-	<title>Radu Lucian</title>
+	<title>Radu Lucian | Contact</title>
 
 	<!-- Favicon  -->
 	<link rel="icon" href="assets/img/favicon.png">
@@ -113,27 +113,28 @@
 					<div class="row justify-content-between">
 						<div class="col-12 col-lg-4 order-last order-md-first">
 							<div class="contact-info">
-								<h3>Schedule a call with me to see if I can help</h3>
-								<p>Whether you’re looking to start a new project or simply want to chat, feel free to reach out to me!</p>
+								<h3>Get in touch</h3>
+								<p>Let's talk to explore ways of collaboration and transform your vision into a remarkable reality.</p>
 
 								<div class="content contact-form">
 									<ul class="list-group list-group-flush">
-										<!-- Item -->
-										<li class="list-group-item">
-											<i class="icon icon-phone"></i>
-											<a class="content" href="tel:+18904735102">+1.890.473.5102</a>
-										</li>
 
 										<!-- Item -->
 										<li class="list-group-item">
 											<i class="icon icon-envelope-open"></i>
-											<a class="content" href="mailto:hello@Radu Luciancom">hello@Radu Luciancom</a>
+											<a class="content" href="https://www.linkedin.com/in/lucian9radu/">lucian9radu</a>
+										</li>
+										
+										<!-- Item -->
+										<li class="list-group-item">
+											<i class="icon icon-envelope-open"></i>
+											<a class="content" href="mailto:contact@radulucian.com">contact@radulucian.com</a>
 										</li>
 
 										<!-- Item -->
 										<li class="list-group-item">
 											<i class="icon icon-location-pin"></i>
-											<a class="content" href="#">912 Park Ave, Ketchikan, Alaska 99901, USA</a>
+											<a class="content" href="#">Bucharest, RO</a>
 										</li>
 									</ul>
 								</div>
@@ -184,43 +185,6 @@
 											<label class="btn magnetic-button btn-outline" for="option-other">Other<span></span></label>
 										</div>
 									</div>
-								</div>
-								<div class="form-group mb-3">
-									<div class="form-label">My budget is:</div>
-									<div class="form-input-group">
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="budget-options" id="budget-1">
-											<label class="btn magnetic-button btn-outline" for="budget-1">&lt; 2k<span></span></label>
-										</div>
-
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="budget-options" id="budget-2">
-											<label class="btn magnetic-button btn-outline" for="budget-2">2-5k<span></span></label>
-										</div>
-
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="budget-options" id="budget-3">
-											<label class="btn magnetic-button btn-outline" for="budget-3">5-10k<span></span></label>
-										</div>
-
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="budget-options" id="budget-4">
-											<label class="btn magnetic-button btn-outline" for="budget-4">10-15k<span></span></label>
-										</div>
-
-										<div class="form-input">
-											<input type="radio" class="btn-check" name="budget-options" id="budget-5">
-											<label class="btn magnetic-button btn-outline" for="budget-5">&gt; 20k<span></span></label>
-										</div>
-									</div>
-								</div>
-								<div class="form-floating mb-3">
-									<input type="text" class="form-control" id="budget" placeholder="name@example.com">
-									<label for="budget">Do you have an exact budget?</label>
-								</div>
-								<div class="form-floating mb-3">
-									<input type="text" class="form-control" id="timeline" placeholder="name@example.com">
-									<label for="timeline">What is your timeline?</label>
 								</div>
 								<div class="form-floating mb-4">
 									<textarea class="form-control" id="message" placeholder="Leave a comment here" style="height: 100px"></textarea>
