--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Title  -->
-	<title>Radu Lucian</title>
+	<title>Radu Lucian | About</title>
 
 	<!-- Favicon  -->
 	<link rel="icon" href="assets/img/favicon.png">
@@ -172,66 +172,7 @@
 						<div class="col-12 col-lg-3">
 							<!-- Intro -->
 							<div class="intro">
-								<h3 class="title">Crafting Unique Skills</h3>
-							</div>
-						</div>
-						<div class="col-12 col-lg-8">
-							<div class="row items">
-								<!-- Item -->
-								<div class="col-12 col-md-6 item">
-									<div class="content">
-										<div class="heading d-flex align-items-center">
-											<i class="icon bi bi-app-indicator"></i>
-											<h2 class="title m-0 ms-2">10<small>+</small></h2>
-										</div>
-										<span>years of experience</span>
-										<p class="mt-3">From startups to established brands, helping them achieve their digital goals.</p>
-									</div>
-								</div>
-								<!-- Item -->
-								<div class="col-12 col-md-6 item">
-									<div class="content">
-										<div class="heading d-flex align-items-center">
-											<i class="icon bi bi-layers-half"></i>
-											<h2 class="title m-0 ms-2">6<small>k</small></h2>
-										</div>
-										<span>clients worldwide</span>
-										<p class="mt-3">Worked with a variety of clients, from startups to established brands, helping them achieve their digital goals.</p>
-									</div>
-								</div>
-								<!-- Item -->
-								<div class="col-12 col-md-6 item">
-									<div class="content">
-										<div class="heading d-flex align-items-center">
-											<i class="icon bi bi-intersect"></i>
-											<h2 class="title m-0 ms-2">12<small>+</small></h2>
-										</div>
-										<span>awards achieved</span>
-										<p class="mt-3">Collaborative and client-focused, ensuring that every project reflects the unique vision.</p>
-									</div>
-								</div>
-								<!-- Item -->
-								<div class="col-12 col-md-6 item align-self-center">
-									<div id="skills" class="content mt-5 mt-md-0">
-										<div class="progress">
-											<span class="title">UI Design & Development</span>
-											<div class="progress-bar" data-progress="94">
-												<span>94%</span>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<hr>
-
-					<div class="row justify-content-between">
-						<div class="col-12 col-lg-3">
-							<!-- Intro -->
-							<div class="intro">
-								<h3 class="title">Awards &amp; Recognition</h3>
+								<h3 class="title">Education</h3>
 							</div>
 						</div>
 						<div class="col-12 col-lg-8">
@@ -242,7 +183,7 @@
 										<a class="logo" href="#">
 											<img src="assets/img/content/award-1.png" alt="">
 										</a>
-										<p>Recognized for the outstanding UX design of the e-commerce platform, reflecting my commitment to user-centered design.</p>
+										<p>Faculty of Electronics, Telecommunications and Information Technology: BEng in Telecommunications Networks and Software</p>
 									</div>
 								</div>
 								<!-- Item -->
@@ -266,91 +207,54 @@
 							</div>
 						</div>
 					</div>
+
+					<hr>
+
+					<div class="row justify-content-between">
+						<div class="col-12 col-lg-3">
+							<!-- Intro -->
+							<div class="intro">
+								<h3 class="title">About me</h3>
+							</div>
+						</div>
+						<div class="col-12 col-lg-8">
+							<div class="row items">
+								<!-- Item -->
+								<div class="col-12 item">
+									<div class="content">
+										<div class="heading d-flex align-items-center">
+											<i class="icon bi bi-app-indicator"></i>
+											<h2 class="title m-0 ms-2">4<small>+</small></h2>
+										</div>
+										<span>years of experience</span>
+										<p class="mt-3">My journey began with an extensive UX course offered by Google, which tought me the basics for crafting seamless user experiences. With this newfound knowledge, I took the bold step of launching my own business entity, dedicated to assisting companies in enhancing their software interface. My passion for mathematics has allowed me to foster a strong foundation in analytical thinking, enabling me to approach problems from a systematic perspective.
+										<br><br>
+										In every project I undertake, my focus lies on the end user. Empathy plays the main role in my design process, as I constantly seek to understand consumer's needs, challenges, and desires. By putting myself in the shoes of the user, I uncover their pain points and transform them into opportunities for improvement.
+										</p>
+									</div>
+								</div>
+								<!-- Item -->
+								<div class="spc-4r"></div>
+								<div class="col-12 item">
+									<div class="content">
+										<div class="heading d-flex align-items-center">
+											<i class="icon bi bi-layers-half"></i>
+											<h2 class="title m-0 ms-2">6 <small>step</small></h2>
+										</div>
+										<span>design process</span>
+										<p class="mt-3">My process begins with thorough research and discovery to understand the target audience and their pain points. I then move to ideation and wireframing, where I sketch concepts and develop interactive prototypes to help me visualize user flows. After refining these through various feedback, I focus on visual design, crafting an engagign, user-friendly interface.
+										<br><br>
+										Having been involved in programming and web technologies from a young age, I have developed not only a keen eye for detail, but also a solid understanding of the technical aspects, requirements or constraints of software development. This knowledge allows me to communicate effectively with the development team, ensuring that my final mockups will also be technically feasible, while solving our users' pain-points and achievening the business goals. Post-launch, I am always looking to assess user feedback and data to identify improvements, to make sure the product continues to meet evolving user needs.
+										</p>
+									</div>
+								</div>
+								
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- ***** Skills Area End ***** -->
-
-			<!-- ***** FAQ Area Start ***** -->
-			<section class="faq">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-12 text-center">
-							<!-- Intro -->
-							<div class="intro">
-								<h3 class="title">Frequently Asked Questions</h3>
-							</div>
-						</div>
-					</div>
-
-					<div class="row justify-content-center mt-4">
-						<div class="col-12 col-md-10">
-							<!-- Radu Lucian Accordion -->
-							<div class="accordion accordion-flush" id="Radu Lucian-accordion">
-								<!-- Accordion Item -->
-								<div class="accordion-item">
-									<h4 class="accordion-header">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-										What services do you offer?
-										</button>
-									</h4>
-									<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#Radu Lucian-accordion">
-										<div class="accordion-body">I offer a range of services including web design, branding, digital marketing, UI/UX design etc. Each project is tailored to meet your <a href="#">unique needs</a> and goals.</div>
-									</div>
-								</div>
-
-								<!-- Accordion Item -->
-								<div class="accordion-item">
-									<h4 class="accordion-header">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
-										How do I get started on a project with you?
-										</button>
-									</h4>
-									<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#Radu Lucian-accordion">
-										<div class="accordion-body">Getting started is simple! Just reach out via the <a href="contact.html">contact form</a> on my website with your project details, and I’ll schedule a consultation to discuss how we can work together to achieve your vision.</div>
-									</div>
-								</div>
-
-								<!-- Accordion Item -->
-								<div class="accordion-item">
-									<h4 class="accordion-header">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
-										Can you help with creative direction or ideas?
-										</button>
-									</h4>
-									<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#Radu Lucian-accordion">
-										<div class="accordion-body">Absolutely! Whether you have a clear vision or need help developing ideas, I offer <a href="#">creative direction</a> to guide your project and ensure it reflects your brand or personal style.</div>
-									</div>
-								</div>
-
-								<!-- Accordion Item -->
-								<div class="accordion-item">
-									<h4 class="accordion-header">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
-										What is your pricing structure?
-										</button>
-									</h4>
-									<div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#Radu Lucian-accordion">
-										<div class="accordion-body">Pricing varies depending on the scope and complexity of the project. After an initial discussion, I’ll provide you with a customized quote that aligns with your specific requirements.</div>
-									</div>
-								</div>
-
-								<!-- Accordion Item -->
-								<div class="accordion-item">
-									<h4 class="accordion-header">
-										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive">
-										Do you work with international clients?
-										</button>
-									</h4>
-									<div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#Radu Lucian-accordion">
-										<div class="accordion-body">Yes, I work with clients from around the world. Thanks to remote collaboration tools, we can easily communicate and work together regardless of your location.</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- ***** FAQ Area End ***** -->
 
 			<!-- ***** CTA Area Start ***** -->
 			<section class="cta border-top border-light-subtle">
