--- a/index-dark.html
+++ b/index-dark.html
@@ -128,14 +128,14 @@
 			</section>
 			<!-- ***** Hero Area End ***** -->
 
-			<!-- ***** Works Area Start ***** -->
+			<!-- ***** Projects Area Start ***** -->
 			<section class="works position-relative p-0">
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
 							<!-- Intro -->
 							<div class="intro d-flex justify-content-between align-items-center">
-								<h3 class="title">Selected Works</h3>
+								<h3 class="title">Selected Projects</h3>
 								<a class="btn btn-outline content-btn swap-icon" href="portfolio-dark.html">View All <i class="icon bi bi-arrow-right-short"></i></a>
 							</div>
 						</div>
@@ -250,7 +250,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- ***** Works Area End ***** -->
+			<!-- ***** Projects Area End ***** -->
 
 			<!-- ***** Services Area Start ***** -->
 			<section class="services">
@@ -844,7 +844,7 @@
 										<a href="index-dark.html" class="nav-link active">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="portfolio-dark.html" class="nav-link">Works <span class="item-count">(02)</span></a>
+										<a href="portfolio-dark.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about-dark.html" class="nav-link">About <span class="item-count">(03)</span></a>
