--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			</section>
 			<!-- ***** Hero Area End ***** -->
 
-			<!-- ***** Works Area Start ***** -->
+			<!-- ***** Projects Area Start ***** -->
 			<section class="works position-relative p-0">
 				<div class="container">
 					<div class="row">
@@ -249,7 +249,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- ***** Works Area End ***** -->
+			<!-- ***** Projects Area End ***** -->
 
 			<!-- ***** Services Area Start ***** -->
 			<section class="services">
@@ -872,7 +872,7 @@
 										<a href="index.html" class="nav-link active">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="projects.html" class="nav-link">Works <span class="item-count">(02)</span></a>
+										<a href="projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
