--- a/blog-single.html
+++ b/blog-single.html
@@ -455,7 +455,7 @@
 										<a href="index.html" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="projects.html" class="nav-link">Works <span class="item-count">(02)</span></a>
+										<a href="projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
