--- a/blog.html
+++ b/blog.html
@@ -531,7 +531,7 @@
 										<a href="index.html" class="nav-link active">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="projects.html" class="nav-link">Works <span class="item-count">(02)</span></a>
+										<a href="projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
