--- a/portfolio-dark.html
+++ b/portfolio-dark.html
@@ -455,7 +455,7 @@
 										<a href="index-dark.html" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="portfolio-dark.html" class="nav-link active">Works <span class="item-count">(02)</span></a>
+										<a href="portfolio-dark.html" class="nav-link active">Projects <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about-dark.html" class="nav-link">About <span class="item-count">(03)</span></a>
