--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 				<div class="container header">
 					<!-- Navbar Brand-->
 					<div class="magnetic">
-						<a class="navbar-brand" href="index.html">
+						<a class="navbar-brand" href="/">
 							Radu Lucian
 						</a>
 					</div>
@@ -369,7 +369,7 @@
 							<div class="offcanvas-body">
 								<ul class="navbar-nav menu pt-md-4">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link">Home <span class="item-count">(01)</span></a>
+										<a href="/" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
