--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
 				<div class="container header">
 					<!-- Navbar Brand-->
 					<div class="magnetic">
-						<a class="navbar-brand" href="/">
+						<a class="navbar-brand" href="index.html">
 							Radu Lucian
 						</a>
 					</div>
@@ -392,10 +392,10 @@
 							<div class="offcanvas-body">
 								<ul class="navbar-nav menu pt-md-4">
 									<li class="nav-item">
-										<a href="/" class="nav-link">Home <span class="item-count">(01)</span></a>
+										<a href="index.html" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="projects.html" class="nav-link active">Projects <span class="item-count">(02)</span></a>
+										<a href="projects.html" class="nav-link active">Works <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
