--- a/contact.html
+++ b/contact.html
@@ -86,9 +86,9 @@
 							<!-- Breadcrumb Content -->
 							<div class="breadcrumb-content">
 								<div class="flex">
-									<h1 class="title">Let's talk!</h1>
+									<h1 class="title">Let's talk</h1>
 									<span class="line animate-line"></span>
-									<h1 class="title">design</h1>
+									<h1 class="title">design!</h1>
 								</div>
 							</div>
 						</div>
