--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
 			<!-- ***** Experiences Area End ***** -->
 
 			<section class="animated-image-container primary-bg p-0">
-				<img class="animated-image" src="assets/img/content/case-1.jpg" alt="">
+				<img class="animated-image" src="assets/img/content/about-1.jpg" alt="">
 			</section>
 
 			<!-- ***** Skills Area Start ***** -->
@@ -192,7 +192,7 @@
 										<a class="logo" href="#">
 											<img src="assets/img/content/award-2.png" alt="">
 										</a>
-										<p>Honorable mention for the innovative design and functionality of the website, highlighting my ability to blend creativity.</p>
+										<p>Google UX Design Professional Certificate - 7 course series offered by Google Career Certificates and Coursera.</p>
 									</div>
 								</div>
 								<!-- Item -->
@@ -201,7 +201,7 @@
 										<a class="logo" href="#">
 											<img src="assets/img/content/award-3.png" alt="">
 										</a>
-										<p>Awarded for the sleek and intuitive UI of personal portfolio website, showcasing my skill in creating aesthetics.</p>
+										<p>British Council - IELTS C1 (Proficient user) English certificate </p>
 									</div>
 								</div>
 							</div>
