--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
 									<div class="image-holder">
 										<!-- Card Thumb -->
 										<a class="card-thumb" href="portfolio-single.html">
-											<img src="assets/img/content/case-1.jpg" alt="">
+											<img src="assets/img/content/projects-1.jpg" alt="">
 										</a>
 										<!-- Card Overlay -->
 										<div class="card-overlay">
 											<div class="heading">
-												<h4 class="title mt-2 mt-md-3 mb-3">App Redesign</h4>
+												<h4 class="title mt-2 mt-md-3 mb-3">Folks Finance xApp</h4>
 												<div class="show-project">
 													<div class="card-terms">
-														<a class="terms badge outlined" href="#">App Design</a>
+														<a class="terms badge outlined" href="#">Web App Design</a>
 														<a class="terms badge outlined" href="#">UI/UX</a>
 													</div>
 													<div class="project-link">
@@ -174,15 +174,15 @@
 									<div class="image-holder">
 										<!-- Card Thumb -->
 										<a class="card-thumb" href="portfolio-single.html">
-											<img src="assets/img/content/case-2.jpg" alt="">
+											<img src="assets/img/content/projects-2.jpg" alt="">
 										</a>
 										<!-- Card Overlay -->
 										<div class="card-overlay">
 											<div class="heading">
-												<h4 class="title mt-2 mt-md-3 mb-3">Revitalizing a Classic Brand</h4>
+												<h4 class="title mt-2 mt-md-3 mb-3">Folks Academy</h4>
 												<div class="show-project">
 													<div class="card-terms">
-														<a class="terms badge outlined" href="#">Branding</a>
+														<a class="terms badge outlined" href="#">eLearning</a>
 														<a class="terms badge outlined" href="#">Web Design</a>
 													</div>
 													<div class="project-link">
@@ -200,41 +200,16 @@
 									<div class="image-holder">
 										<!-- Card Thumb -->
 										<a class="card-thumb" href="portfolio-single.html">
-											<img src="assets/img/content/case-3.jpg" alt="">
+											<img src="assets/img/content/projects-3.jpg" alt="">
 										</a>
 										<!-- Card Overlay -->
 										<div class="card-overlay">
 											<div class="heading">
-												<h4 class="title mt-2 mt-md-3 mb-3">Brand Refresh</h4>
+												<h4 class="title mt-2 mt-md-3 mb-3">Folks Router</h4>
 												<div class="show-project">
 													<div class="card-terms">
+														<a class="terms badge outlined" href="#">Dev</a>
 														<a class="terms badge outlined" href="#">UI/UX</a>
-													</div>
-													<div class="project-link">
-														<a href="portfolio-single.html">Show Project</a>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<!-- Stack Item -->
-							<div class="stack-item">
-								<div class="card portfolio-item layout-2 scale has-shadow">
-									<div class="image-holder">
-										<!-- Card Thumb -->
-										<a class="card-thumb" href="portfolio-single.html">
-											<img src="assets/img/content/case-4.jpg" alt="">
-										</a>
-										<!-- Card Overlay -->
-										<div class="card-overlay">
-											<div class="heading">
-												<h4 class="title mt-2 mt-md-3 mb-3">STU Digital Experience</h4>
-												<div class="show-project">
-													<div class="card-terms">
-														<a class="terms badge outlined" href="#">SEO</a>
-														<a class="terms badge outlined" href="#">Branding</a>
 													</div>
 													<div class="project-link">
 														<a href="portfolio-single.html">Show Project</a>
