--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -247,7 +247,7 @@
 						<div class="col-12 col-lg-3">
 							<!-- Intro -->
 							<div class="intro">
-								<h3 class="title">Collaboration & Development</h3>
+								<h3 class="title">Cross-functional collaboration</h3>
 							</div>
 						</div>
 						<div class="col-12 col-lg-8">
