--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
 				<div class="container header">
 					<!-- Navbar Brand-->
 					<div class="magnetic">
-						<a class="navbar-brand" href="index.html">
+						<a class="navbar-brand" href="/">
 							Radu Lucian
 						</a>
 					</div>
@@ -107,13 +107,13 @@
 								<div class="image-holder">
 									<!-- Card Thumb -->
 									<a class="card-thumb" href="portfolio-single.html">
-										<img src="assets/img/content/case-1.jpg" alt="">
+										<img src="assets/img/content/projects-2.jpg" alt="">
 									</a>
 								</div>
 								<!-- Card content -->
 								<div class="card-content p-2">
 									<div class="heading">
-										<h4 class="title mt-2 mt-md-3 mb-3">App Redesign</h4>
+										<h4 class="title mt-2 mt-md-3 mb-3">Folks Academy</h4>
 										<div class="show-project">
 											<div class="card-terms">
 												<a class="terms badge" href="#">App Design</a>
@@ -133,13 +133,13 @@
 								<div class="image-holder">
 									<!-- Card Thumb -->
 									<a class="card-thumb" href="portfolio-single.html">
-										<img src="assets/img/content/case-2.jpg" alt="">
+										<img src="assets/img/content/projects-1.jpg" alt="">
 									</a>
 								</div>
 								<!-- Card content -->
 								<div class="card-content p-2">
 									<div class="heading">
-										<h4 class="title mt-2 mt-md-3 mb-3">Revitalizing a Classic Brand</h4>
+										<h4 class="title mt-2 mt-md-3 mb-3">Folks Finance xApp</h4>
 										<div class="show-project">
 											<div class="card-terms">
 												<a class="terms badge" href="#">Branding</a>
@@ -159,13 +159,13 @@
 								<div class="image-holder">
 									<!-- Card Thumb -->
 									<a class="card-thumb" href="portfolio-single.html">
-										<img src="assets/img/content/case-3.jpg" alt="">
+										<img src="assets/img/content/projects-3.jpg" alt="">
 									</a>
 								</div>
 								<!-- Card content -->
 								<div class="card-content p-2">
 									<div class="heading">
-										<h4 class="title mt-2 mt-md-3 mb-3">Brand Refresh</h4>
+										<h4 class="title mt-2 mt-md-3 mb-3">Folks Router</h4>
 										<div class="show-project">
 											<div class="card-terms">
 												<a class="terms badge" href="#">UI/UX</a>
@@ -190,7 +190,7 @@
 								<!-- Card content -->
 								<div class="card-content p-2">
 									<div class="heading">
-										<h4 class="title mt-2 mt-md-3 mb-3">STU Digital Experience</h4>
+										<h4 class="title mt-2 mt-md-3 mb-3">xAlgo</h4>
 										<div class="show-project">
 											<div class="card-terms">
 												<a class="terms badge" href="#">SEO</a>
@@ -216,7 +216,7 @@
 								<!-- Card content -->
 								<div class="card-content p-2">
 									<div class="heading">
-										<h4 class="title mt-2 mt-md-3 mb-3">STU Digital Experience</h4>
+										<h4 class="title mt-2 mt-md-3 mb-3">Folksy Guys</h4>
 										<div class="show-project">
 											<div class="card-terms">
 												<a class="terms badge" href="#">Branding</a>
@@ -242,7 +242,7 @@
 								<!-- Card content -->
 								<div class="card-content p-2">
 									<div class="heading">
-										<h4 class="title mt-2 mt-md-3 mb-3">STU Digital Experience</h4>
+										<h4 class="title mt-2 mt-md-3 mb-3">Dedit</h4>
 										<div class="show-project">
 											<div class="card-terms">
 												<a class="terms badge" href="#">SEO</a>
@@ -268,7 +268,7 @@
 								<!-- Card content -->
 								<div class="card-content p-2">
 									<div class="heading">
-										<h4 class="title mt-2 mt-md-3 mb-3">App Redesign</h4>
+										<h4 class="title mt-2 mt-md-3 mb-3">FEV BLC</h4>
 										<div class="show-project">
 											<div class="card-terms">
 												<a class="terms badge" href="#">App Design</a>
@@ -392,7 +392,7 @@
 							<div class="offcanvas-body">
 								<ul class="navbar-nav menu pt-md-4">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link">Home <span class="item-count">(01)</span></a>
+										<a href="/" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
 										<a href="projects.html" class="nav-link active">Works <span class="item-count">(02)</span></a>
