--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
 
 										<!-- Item -->
 										<li class="list-group-item">
-											<i class="icon icon-envelope-open"></i>
+											<i class="icon icon-social-linkedin"></i>
 											<a class="content" href="https://www.linkedin.com/in/lucian9radu/">lucian9radu</a>
 										</li>
 										
