--- a/projects.html
+++ b/projects.html
@@ -106,7 +106,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="portfolio-single.html">
+									<a class="card-thumb" href="projects/xapp.html">
 										<img src="assets/img/content/projects-2.jpg" alt="">
 									</a>
 								</div>
@@ -120,7 +120,7 @@
 												<a class="terms badge" href="#">UI/UX</a>
 											</div>
 											<div class="project-link">
-												<a href="portfolio-single.html">Show Project</a>
+												<a href="projects/xapp.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -132,7 +132,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="portfolio-single.html">
+									<a class="card-thumb" href="projects/xapp.html">
 										<img src="assets/img/content/projects-1.jpg" alt="">
 									</a>
 								</div>
@@ -146,7 +146,7 @@
 												<a class="terms badge" href="#">Web Design</a>
 											</div>
 											<div class="project-link">
-												<a href="portfolio-single.html">Show Project</a>
+												<a href="projects/xapp.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -158,7 +158,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="portfolio-single.html">
+									<a class="card-thumb" href="projects/xapp.html">
 										<img src="assets/img/content/projects-3.jpg" alt="">
 									</a>
 								</div>
@@ -171,7 +171,7 @@
 												<a class="terms badge" href="#">UI/UX</a>
 											</div>
 											<div class="project-link">
-												<a href="portfolio-single.html">Show Project</a>
+												<a href="projects/xapp.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -183,7 +183,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="portfolio-single.html">
+									<a class="card-thumb" href="projects/xapp.html">
 										<img src="assets/img/content/case-4.jpg" alt="">
 									</a>
 								</div>
@@ -197,7 +197,7 @@
 												<a class="terms badge" href="#">Branding</a>
 											</div>
 											<div class="project-link">
-												<a href="portfolio-single.html">Show Project</a>
+												<a href="projects/xapp.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -209,7 +209,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="portfolio-single.html">
+									<a class="card-thumb" href="projects/xapp.html">
 										<img src="assets/img/content/case-5.jpg" alt="">
 									</a>
 								</div>
@@ -223,7 +223,7 @@
 												<a class="terms badge" href="#">Web Design</a>
 											</div>
 											<div class="project-link">
-												<a href="portfolio-single.html">Show Project</a>
+												<a href="projects/xapp.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -235,7 +235,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="portfolio-single.html">
+									<a class="card-thumb" href="projects/xapp.html">
 										<img src="assets/img/content/case-6.jpg" alt="">
 									</a>
 								</div>
@@ -249,7 +249,7 @@
 												<a class="terms badge" href="#">Branding</a>
 											</div>
 											<div class="project-link">
-												<a href="portfolio-single.html">Show Project</a>
+												<a href="projects/xapp.html">Show Project</a>
 											</div>
 										</div>
 									</div>
@@ -261,7 +261,7 @@
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
 									<!-- Card Thumb -->
-									<a class="card-thumb" href="portfolio-single.html">
+									<a class="card-thumb" href="projects/xapp.html">
 										<img src="assets/img/content/case-1.jpg" alt="">
 									</a>
 								</div>
@@ -275,7 +275,7 @@
 												<a class="terms badge" href="#">UI/UX</a>
 											</div>
 											<div class="project-link">
-												<a href="portfolio-single.html">Show Project</a>
+												<a href="projects/xapp.html">Show Project</a>
 											</div>
 										</div>
 									</div>
