--- a/projects/xapp.html
+++ b/projects/xapp.html
@@ -12,12 +12,12 @@
 	<title>Radu Lucian</title>
 
 	<!-- Favicon  -->
-	<link rel="icon" href="assets/img/favicon.png">
+	<link rel="icon" href="../assets/img/favicon.png">
 
 	<!-- ***** All CSS Files ***** -->
 
 	<!-- Style css -->
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="../assets/css/style.css">
 
 </head>
 
@@ -37,7 +37,7 @@
 				<div class="container header">
 					<!-- Navbar Brand-->
 					<div class="magnetic">
-						<a class="navbar-brand" href="/">
+						<a class="navbar-brand" href="..//">
 							Radu Lucian
 						</a>
 					</div>
@@ -46,13 +46,13 @@
 					<!-- Navbar Nav -->
 					<ul class="navbar-nav items d-none d-md-block">
 						<li class="nav-item">
-							<a href="projects.html" class="nav-link">Projects</a>
+							<a href="../projects.html" class="nav-link">Projects</a>
 						</li>
 						<li class="nav-item">
-							<a href="about.html" class="nav-link">About</a>
+							<a href="../about.html" class="nav-link">About</a>
 						</li>
 						<li class="nav-item">
-							<a href="contact.html" class="nav-link">Contact</a>
+							<a href="../contact.html" class="nav-link">Contact</a>
 						</li>
 					</ul>
 
@@ -88,8 +88,8 @@
 								<!-- Portfolio Meta -->
 								<div class="portfolio-meta d-flex align-items-center">
 									<div class="portfolio-terms">
-										<a class="terms" href="#">Web App Design</a>
-										<a class="terms" href="#">UI/UX</a>
+										<a class="terms" href="../#">Web App Design</a>
+										<a class="terms" href="../#">UI/UX</a>
 									</div>
 								</div>
 								<h2>Folks Finance xApp</h2>
@@ -109,8 +109,8 @@
 								<div class="role">
 									<h6 class="title mt-0 mb-1 mb-md-3">Role/Services</h6>
 									<div class="portfolio-terms">
-										<a class="terms" href="#">App Design</a>
-										<a class="terms" href="#">UI/UX</a>
+										<a class="terms" href="../#">App Design</a>
+										<a class="terms" href="../#">UI/UX</a>
 									</div>
 								</div>
 
@@ -129,20 +129,20 @@
 
 							<!-- Live Site -->
 							<div class="socials item">
-								<a class="nav-link d-inline-flex swap-icon ms-0" href="#">Live Site <i class="icon bi bi-arrow-right-short"></i></a>
+								<a class="nav-link d-inline-flex swap-icon ms-0" href="../#">Live Site <i class="icon bi bi-arrow-right-short"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/content/case-1.jpg" alt="">
 							</div>
 							<div class="reveal-img item">
-								<img src="assets/img/content/case-2.jpg" alt="">
+								<img src="../assets/img/content/case-2.jpg" alt="">
 							</div>
 							<div class="reveal-img item">
-								<img src="assets/img/content/case-3.jpg" alt="">
+								<img src="../assets/img/content/case-3.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -174,7 +174,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/content/case-1.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -205,7 +205,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/content/case-1.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -234,7 +234,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/content/case-1.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -265,7 +265,7 @@
 					<div class="row portfolio-content items">
 						<div class="col-12">
 							<div class="reveal-img item">
-								<img src="assets/img/content/case-1.jpg" alt="">
+								<img src="../assets/img/content/case-1.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -281,15 +281,15 @@
 							<div class="cta-text">
 								<span class="line-item">Together</span>
 								<span class="line"></span>
-								<a class="btn magnetic-button" href="contact.html">Get In Touch! <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<a class="btn magnetic-button" href="../contact.html">Get In Touch! <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
 							</div>
 
 							<!-- Socials -->
 							<div class="socials mt-5">
 								<nav class="nav justify-content-center">
-									<a class="nav-link swap-icon" href="#">Instagram <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="#">Twitter <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="#">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../#">Instagram <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../#">Twitter <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../#">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
 								</nav>
 							</div>
 						</div>
@@ -308,7 +308,7 @@
 								<div class="copyright">&copy; 2024 Radu Lucian. All rights reserved.</a></div>
 								<!-- Scroll To Top -->
 								<div id="scroll-to-top" class="scroll-to-top mt-3 mt-sm-0">
-									<a href="#header" class="smooth-anchor">Scroll to Top</a>
+									<a href="../#header" class="smooth-anchor">Scroll to Top</a>
 								</div>
 							</div>
 						</div>
@@ -385,16 +385,16 @@
 							<div class="offcanvas-body">
 								<ul class="navbar-nav menu pt-md-4">
 									<li class="nav-item">
-										<a href="/" class="nav-link">Home <span class="item-count">(01)</span></a>
+										<a href="..//" class="nav-link">Home <span class="item-count">(01)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
+										<a href="../projects.html" class="nav-link">Projects <span class="item-count">(02)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link">About <span class="item-count">(03)</span></a>
+										<a href="../about.html" class="nav-link">About <span class="item-count">(03)</span></a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link">Contact <span class="item-count">(04)</span></a>
+										<a href="../contact.html" class="nav-link">Contact <span class="item-count">(04)</span></a>
 									</li>
 								</ul>
 							</div>
@@ -411,9 +411,9 @@
 							<!-- Socials -->
 							<div class="socials offcanvas-body">
 								<nav class="nav">
-									<a class="nav-link swap-icon" href="#">Instagram <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="#">Twitter <i class="icon rotate bi bi-arrow-right-short"></i></a>
-									<a class="nav-link swap-icon" href="#">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../#">Instagram <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../#">Twitter <i class="icon rotate bi bi-arrow-right-short"></i></a>
+									<a class="nav-link swap-icon" href="../#">Linkedin <i class="icon rotate bi bi-arrow-right-short"></i></a>
 								</nav>
 							</div>
 						</div>
@@ -432,24 +432,24 @@
 	<!-- ***** All jQuery Plugins ***** -->
 
 	<!-- jQuery(necessary for all JavaScript plugins) -->
-	<script src="assets/js/vendor/jquery.min.js"></script>
+	<script src="../assets/js/vendor/jquery.min.js"></script>
 
 	<!-- Bootstrap js -->
-	<script src="assets/js/vendor/popper.min.js"></script>
-	<script src="assets/js/vendor/bootstrap.min.js"></script>
+	<script src="../assets/js/vendor/popper.min.js"></script>
+	<script src="../assets/js/vendor/bootstrap.min.js"></script>
 
 	<!-- Plugins js -->
-	<script src="assets/js/vendor/all.min.js"></script>
-	<script src="assets/js/vendor/gsap.min.js"></script>
-	<script src="assets/js/vendor/ScrollTrigger.min.js"></script>
-	<script src="assets/js/vendor/lenis.min.js"></script>
-	<script src="assets/js/vendor/SplitType.min.js"></script>
-	<script src="assets/js/vendor/shuffle.min.js"></script>
-	<script src="assets/js/vendor/gallery.min.js"></script>
-	<script src="assets/js/vendor/slider.min.js"></script>
+	<script src="../assets/js/vendor/all.min.js"></script>
+	<script src="../assets/js/vendor/gsap.min.js"></script>
+	<script src="../assets/js/vendor/ScrollTrigger.min.js"></script>
+	<script src="../assets/js/vendor/lenis.min.js"></script>
+	<script src="../assets/js/vendor/SplitType.min.js"></script>
+	<script src="../assets/js/vendor/shuffle.min.js"></script>
+	<script src="../assets/js/vendor/gallery.min.js"></script>
+	<script src="../assets/js/vendor/slider.min.js"></script>
 
 	<!-- Main js -->
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/main.js"></script>
 </body>
 
 </html>
