--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@
 			<section class="works explore-area portfolio-filter pt-0">
 				<div class="container">
 					<div class="row filter-items items inner">
-						<div class="col-12 col-lg-4 item filter-item" data-groups='["branding","app-design"]'>
+						<div class="col-12 col-lg-4 item filter-item" data-groups='["branding","app-design"]' data-order="2">
 							<!-- Portfolio Item -->
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
@@ -127,7 +127,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-lg-8 item filter-item" data-groups='["ui-ux","app-design"]'>
+						<div class="col-12 col-lg-8 item filter-item" data-groups='["ui-ux","app-design"]' data-order="1">
 							<!-- Portfolio Item -->
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
@@ -153,7 +153,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-lg-4 item filter-item" data-groups='["branding"]'>
+						<div class="col-12 col-lg-4 item filter-item" data-groups='["branding"]' data-order="3">
 							<!-- Portfolio Item -->
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
@@ -178,7 +178,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-lg-4 item filter-item" data-groups='["app-design","branding"]'>
+						<div class="col-12 col-lg-4 item filter-item" data-groups='["app-design","branding"]' data-order="4">
 							<!-- Portfolio Item -->
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
@@ -204,7 +204,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-lg-4 item filter-item" data-groups='["app-design","ui-ux"]'>
+						<div class="col-12 col-lg-4 item filter-item" data-groups='["app-design","ui-ux"]' data-order="5">
 							<!-- Portfolio Item -->
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
@@ -230,7 +230,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-lg-8 item filter-item" data-groups='["ui-ux"]'>
+						<div class="col-12 col-lg-8 item filter-item" data-groups='["ui-ux"]' data-order="7">
 							<!-- Portfolio Item -->
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
@@ -256,7 +256,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-lg-4 item filter-item" data-groups='["branding","app-design"]'>
+						<div class="col-12 col-lg-4 item filter-item" data-groups='["branding","app-design"]' data-order="6">
 							<!-- Portfolio Item -->
 							<div class="card portfolio-item layout-2 scale has-shadow">
 								<div class="image-holder">
