--- a/projects/xapp.html
+++ b/projects/xapp.html
@@ -9,7 +9,7 @@
 	<!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Title  -->
-	<title>Radu Lucian</title>
+	<title>Folks Finance xChain App</title>
 
 	<!-- Favicon  -->
 	<link rel="icon" href="../assets/img/favicon.png">
@@ -100,31 +100,13 @@
 							<!-- Task -->
 							<div class="task">
 								<h6 class="title mb-3">Task</h6>
-								<span class="details">Our decentralized lending platforms offered limited liquidity and accessibility. The solution was to enable cross-chain lending protocols and decentralized account creation for seamless assets transfers.</span>
+								<span class="details">Our decentralized lending platforms offered limited liquidity and accessibility, restraining assets trading to a maximum of one chain.</span>
 							</div>
 
-							<!-- Meta Content -->
-							<div class="content item d-flex flex-column flex-md-row justify-content-between">
-								<!-- Role -->
-								<div class="role">
-									<h6 class="title mt-0 mb-1 mb-md-3">Role/Services</h6>
-									<div class="portfolio-terms">
-										<a class="terms" href="../#">App Design</a>
-										<a class="terms" href="../#">UI/UX</a>
-									</div>
-								</div>
-
-								<!-- Client -->
-								<div class="client my-3 my-md-0">
-									<h6 class="title mt-0 mb-1 mb-md-3">Client</h6>
-									<span>Aurora Tech</span>
-								</div>
-
-								<!-- Category -->
-								<div class="category">
-									<h6 class="title mt-0 mb-1 mb-md-3">Category &amp; Year</h6>
-									<span>Brand Identity &copy;2024</span>
-								</div>
+							<!-- Solution -->
+							<div class="task">
+								<h6 class="title mb-3">Solution</h6>
+								<span class="details">Enabling cross-chain lending protocols and a decentralized account creation for seamless assets transfers.</span>
 							</div>
 
 							<!-- Live Site -->
