--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
 									<div class="content">
 										<span class="count">02.</span>
 										<h4 class="title mt-0 mb-3">FEV Automotive</h4>
-										<h6 class="position my-3">UX Engineer Intern</h6>
+										<h6 class="position my-3">UX Engineer</h6>
 										<span class="badge small">Jul 2022 – Sep 2022</span>
 										<p>I owned the design process of a vehicle bus loads app, and assisted engineers in the software development, leading to a successful launch to FEV's 7000+ employees.</p>
 									</div>
@@ -149,7 +149,7 @@
 									<div class="content">
 										<span class="count">03.</span>
 										<h4 class="title mt-0 mb-3">Proxify</h4>
-										<h6 class="position my-3">Freelance UX Designer</h6>
+										<h6 class="position my-3">UX Designer</h6>
 										<span class="badge small">May 2020 – Jun 2022</span>
 										<p>After completing the vetting process of Proxify, I delivered pixel-perfect commercial apps for international clients, managing the full design lifecycle of mobile or web applications.</p>
 									</div>
@@ -183,7 +183,7 @@
 										<a class="logo" href="#">
 											<img src="assets/img/content/award-1.png" alt="">
 										</a>
-										<p>Faculty of Electronics, Telecommunications and Information Technology: BEng in Telecommunications Networks and Software</p>
+										<p>Bachelor of Engineering - Telecommunications Networks and Software</p>
 									</div>
 								</div>
 								<!-- Item -->
@@ -192,7 +192,7 @@
 										<a class="logo" href="#">
 											<img src="assets/img/content/award-2.png" alt="">
 										</a>
-										<p>Google UX Design Professional Certificate - 7 course series offered by Google Career Certificates and Coursera.</p>
+										<p>Google UX Design Professional Certificate - Course offered by Google Career Certificates</p>
 									</div>
 								</div>
 								<!-- Item -->
