--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 												<h4 class="title mt-2 mt-md-3 mb-3">Folks Router</h4>
 												<div class="show-project">
 													<div class="card-terms">
-														<a class="terms badge outlined" href="#">Dev</a>
+														<a class="terms badge outlined" href="#">B2D</a>
 														<a class="terms badge outlined" href="#">UI/UX</a>
 													</div>
 													<div class="project-link">
@@ -573,7 +573,7 @@
 									<a href="about.html" class="clickable-item">
 										<div class="content">
 											<h4 class="title mt-0 mb-3">FEV Automotive</h4>
-											<span class="tags mt-3 mt-md-0">UX Engineer Intern &nbsp;|&nbsp; Jul 2022 – Sep 2022</span>
+											<span class="tags mt-3 mt-md-0">UX Engineer &nbsp;|&nbsp; Jul 2022 – Sep 2022</span>
 										</div>
 										<!-- Award Button -->
 										<a class="award-btn rounded-pill" href="about.html">
@@ -587,7 +587,7 @@
 									<a href="about.html" class="clickable-item">
 										<div class="content">
 											<h4 class="title mt-0 mb-3">Proxify</h4>
-											<span class="tags mt-3 mt-md-0">Freelance UX Designer &nbsp;|&nbsp; May 2020 – Jun 2022</span>
+											<span class="tags mt-3 mt-md-0">UX Designer &nbsp;|&nbsp; May 2020 – Jun 2022</span>
 										</div>
 										<!-- Award Button -->
 										<a class="award-btn rounded-pill" href="about.html">
