--- a/projects.html
+++ b/projects.html
@@ -116,8 +116,8 @@
 										<h4 class="title mt-2 mt-md-3 mb-3">Folks Academy</h4>
 										<div class="show-project">
 											<div class="card-terms">
-												<a class="terms badge" href="#">App Design</a>
-												<a class="terms badge" href="#">UI/UX</a>
+												<a class="terms badge" href="#">eLearning</a>
+												<a class="terms badge" href="#">Web Design</a>
 											</div>
 											<div class="project-link">
 												<a href="projects/xapp.html">Show Project</a>
@@ -142,8 +142,8 @@
 										<h4 class="title mt-2 mt-md-3 mb-3">Folks Finance xApp</h4>
 										<div class="show-project">
 											<div class="card-terms">
-												<a class="terms badge" href="#">Branding</a>
-												<a class="terms badge" href="#">Web Design</a>
+												<a class="terms badge" href="#">Web App Design</a>
+												<a class="terms badge" href="#">UI/UX</a>
 											</div>
 											<div class="project-link">
 												<a href="projects/xapp.html">Show Project</a>
@@ -168,6 +168,7 @@
 										<h4 class="title mt-2 mt-md-3 mb-3">Folks Router</h4>
 										<div class="show-project">
 											<div class="card-terms">
+												<a class="terms badge" href="#">B2D</a>
 												<a class="terms badge" href="#">UI/UX</a>
 											</div>
 											<div class="project-link">
@@ -193,8 +194,8 @@
 										<h4 class="title mt-2 mt-md-3 mb-3">xAlgo</h4>
 										<div class="show-project">
 											<div class="card-terms">
-												<a class="terms badge" href="#">SEO</a>
-												<a class="terms badge" href="#">Branding</a>
+												<a class="terms badge" href="#">Web App Design</a>
+												<a class="terms badge" href="#">UI/UX</a>
 											</div>
 											<div class="project-link">
 												<a href="projects/xapp.html">Show Project</a>
@@ -220,7 +221,7 @@
 										<div class="show-project">
 											<div class="card-terms">
 												<a class="terms badge" href="#">Branding</a>
-												<a class="terms badge" href="#">Web Design</a>
+												<a class="terms badge" href="#">NFT</a>
 											</div>
 											<div class="project-link">
 												<a href="projects/xapp.html">Show Project</a>
@@ -245,8 +246,8 @@
 										<h4 class="title mt-2 mt-md-3 mb-3">Dedit</h4>
 										<div class="show-project">
 											<div class="card-terms">
-												<a class="terms badge" href="#">SEO</a>
-												<a class="terms badge" href="#">Branding</a>
+												<a class="terms badge" href="#">B2B</a>
+												<a class="terms badge" href="#">Web App Design</a>
 											</div>
 											<div class="project-link">
 												<a href="projects/xapp.html">Show Project</a>
@@ -271,8 +272,8 @@
 										<h4 class="title mt-2 mt-md-3 mb-3">FEV BLC</h4>
 										<div class="show-project">
 											<div class="card-terms">
-												<a class="terms badge" href="#">App Design</a>
 												<a class="terms badge" href="#">UI/UX</a>
+												<a class="terms badge" href="#">Development</a>
 											</div>
 											<div class="project-link">
 												<a href="projects/xapp.html">Show Project</a>
